--- a/style/style.css
+++ b/style/style.css
@@ -2,7 +2,8 @@ body {
     width: 100%;
     height: 100vh;
     margin: 0;
-    padding: 0
+    padding: 0;
+    color: #505050;
 }
 
 #map {
@@ -27,14 +28,20 @@ body {
 }
 
 .left-panel .panel-item {
+    width: 320px;
     background: #fff;
     padding: 10px 15px;
     border-radius: 5px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     display: flex;
     align-items: center;
+    justify-content: space-between;
+}
+
+.left-panel .panel-item .panel-item-block{
+    display: flex;
+    align-items: center;
     gap: 10px;
-    font-family: Arial, sans-serif;
 }
 
 /* Кастомный чекбокс */
@@ -64,12 +71,16 @@ body {
     font-size: 10px;
 }
 
+.panel-item-block-name {
+    width: 180px;
+}
+
 /* Правый блок */
 .right-panel {
     display: flex;
     flex-direction: column;
-    gap: 25px; /* Отступ между группами */
-
+    gap: 25px;
+    margin-block-start: 20px;
 }
 
 .right-panel .toggle-btn {
@@ -127,4 +138,5 @@ body {
 /* Скрытие правого блока */
 .left-panel.hidden {
     display: none;
+    transition:all 1s ease-in;
 }
