--- a/style/style.css
+++ b/style/style.css
@@ -1,3 +1,10 @@
+@media print {
+    .custom-controls, .custom-controls-center, .custom-controls-right {
+        display: none; /* Скрываем кнопки и другие элементы интерфейса */
+        visibility: hidden;
+    }
+}
+
 html {
     width: 100%;
     height: 100%;
